--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,6 +43,9 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 # Custom error handler
 play.http.errorHandler = "config.ErrorHandler"
 
+# Custom binder
+play.modules.enabled += "global.ServiceBindings"
+
 play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
 
 # Play Modules
@@ -75,6 +78,12 @@ microservice {
       protocol = http
       host = localhost
       port = 9180
+    }
+
+    penalties {
+      protocol = http
+      host = localhost
+      port = 9182
     }
   }
 }
