[PRM-221] - Added call to backend and parse result for reasonable excuses

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -146,6 +146,10 @@ signIn {
   continueBaseUrl = "http://localhost:9181"
 }
 
+reasonableExcuse {
+  fetchUrl = "/penalties/appeals-data/reasonable-excuses"
+}
+
 signOut {
   url = "http://localhost:9553/bas-gateway/sign-out-without-state?continue="
 }
