[PRM-266] - Base implementation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -148,6 +148,7 @@ signIn {
 
 reasonableExcuse {
   fetchUrl = "/penalties/appeals-data/reasonable-excuses"
+  submitUrl = "/penalties/appeals/submit-appeal"
 }
 
 signOut {
