[PRM-267] - Base implementation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -137,10 +137,11 @@ timeout {
   countDown = 120
 }
 
-feedback {
-  url = "#"
+urls {
+  penalties-frontend = "http://localhost:9180/penalties"
+  vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
+  feedbackUrl = "http://localhost:9514/feedback/penalties-appeals-frontend"
 }
-
 signIn {
   url = "http://localhost:9949/auth-login-stub/gg-sign-in"
   continueBaseUrl = "http://localhost:9181"
