[PRM-282] Add bullet point to landing page if appeal is late

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -155,3 +155,7 @@ reasonableExcuse {
 signOut {
   url = "http://localhost:9553/bas-gateway/sign-out-without-state?continue="
 }
+
+constants {
+  daysRequiredForLateAppeal = 30
+}
