[GTM_Config] Add GTM container ID

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -122,9 +122,8 @@ controllers {
   }
 }
 
-google-analytics {
-  token = N/A
-  host = auto
+tracking-consent-frontend {
+  gtm.container = "b"
 }
 
 play.i18n.langs = ["en", "cy"]
