[COOKIE_CONSENT] - Added cookie consent

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,7 +46,7 @@ play.http.errorHandler = "config.ErrorHandler"
 # Custom binder
 play.modules.enabled += "global.ServiceBindings"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 www.google-analytics.com https://www.googletagmanager.com data:"
 
 # Play Modules
 # ~~~~
