[PRM-418] - Added agent auth

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -85,6 +85,11 @@ microservice {
       host = localhost
       port = 9182
     }
+
+    vat-agent-client-lookup-frontend {
+      host = "http://localhost:9152"
+      startUrl = "/vat-through-software/test-only/vaclf-stub"
+    }
   }
 }
 
@@ -158,3 +163,5 @@ signOut {
 constants {
   daysRequiredForLateAppeal = 30
 }
+
+host = "http://localhost:9180"
