--- a/conf/application.conf
+++ b/conf/application.conf
@@ -166,6 +166,10 @@ constants {
 
 host = "http://localhost:9180"
 
+upscan {
+  callback-endpoint = "http://localhost:9180/internal/call-back-from-upscan"
+}
+
 contact-frontend.serviceId = "vat-penalties"
 
 mongodb {
