[PRM-653] - Added Mongo to service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -167,3 +167,8 @@ constants {
 host = "http://localhost:9180"
 
 contact-frontend.serviceId = "vat-penalties"
+
+mongodb {
+  uri = "mongodb://localhost:27017/penalties-appeals-frontend"
+  ttl = 1 hour
+}
