[PRM-648] - Added callback functionality for upload service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,9 @@ play.http.errorHandler = "config.ErrorHandler"
 # Custom binder
 play.modules.enabled += "global.ServiceBindings"
 
+# Mongo module
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+
 play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 www.google-analytics.com https://www.googletagmanager.com data:"
 
 # Play Modules
