PRM-632 Reviews implemented.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -167,3 +167,7 @@ constants {
 host = "http://localhost:9180"
 
 contact-frontend.serviceId = "vat-penalties"
+
+pega {
+    bearerToken = "placeholder"
+}
