PRM-632 Added config value for PEGA BearerToken (#134)
* PRM-632 Added config value for PEGA BearerToken

* PRM-632 Reviews implemented.

* PRM-632 fixed typo

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -172,3 +172,7 @@ mongodb {
   uri = "mongodb://localhost:27017/penalties-appeals-frontend"
   ttl = 1 hour
 }
+
+pega {
+    bearerToken = "placeholder"
+}
