PRM-633 Added header 'Environment' for PEGA

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -175,4 +175,5 @@ mongodb {
 
 pega {
     bearerToken = "placeholder"
+    environment = "environmentValue"  # environmentValue for QA,staging and production: QA = ist0, staging = clone, production = live
 }
