added Upscan connector plus parser

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,6 +93,12 @@ microservice {
       host = "http://localhost:9152"
       startUrl = "/vat-through-software/test-only/vaclf-stub"
     }
+
+    upscan-initiate {
+      protocol = http
+      host = localhost
+      port = 9570
+    }
   }
 }
 
