[PRM-642] - Added JS components to upload and save 'state' of file uploads

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,7 +49,7 @@ play.modules.enabled += "global.ServiceBindings"
 # Mongo module
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 www.google-analytics.com https://www.googletagmanager.com data:"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9570 localhost:9032 localhost:12345 www.google-analytics.com https://www.googletagmanager.com data:"
 
 # Play Modules
 # ~~~~
@@ -185,4 +185,9 @@ mongodb {
 pega {
     bearerToken = "placeholder"
     environment = "environmentValue"  # environmentValue for QA,staging and production: QA = ist0, staging = clone, production = live
+}
+
+upscan {
+  callback.base = "http://localhost:9181"
+  acceptedFileTypes = "image/jpg,image/jpeg,image/png,image/tiff,application/pdf,application/vnd.ms-excel,application/msword,application/vnd.ms-outlook,application/vnd.oasis.opendocument.spreadsheet,text/plain"
 }
