--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,6 +154,7 @@ urls {
   penalties-frontend = "http://localhost:9180/penalties"
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   feedbackUrl = "http://localhost:9514/feedback/penalties-appeals-frontend"
+  whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
 }
 signIn {
   url = "http://localhost:9949/auth-login-stub/gg-sign-in"
