[PRM-740] - Upscan error handling + S3 proxy error handling

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -192,4 +192,5 @@ pega {
 upscan {
   callback.base = "http://localhost:9181"
   acceptedFileTypes = "image/jpg,image/jpeg,image/png,image/tiff,application/pdf,application/vnd.ms-excel,application/msword,application/vnd.ms-outlook,application/vnd.oasis.opendocument.spreadsheet,text/plain"
+  maxFileSize = 6291456
 }
