PRM-734 Replaced enum value by appConfig value constant

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -172,6 +172,7 @@ signOut {
 
 constants {
   daysRequiredForLateAppeal = 30
+  numberOfCharsInTextArea = 5000
 }
 
 host = "http://localhost:9180"
