--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,7 +49,7 @@ play.modules.enabled += "global.ServiceBindings"
 # Mongo module
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9570 localhost:9032 localhost:12345 www.google-analytics.com https://www.googletagmanager.com data:; connect-src 'self' localhost:9570 localhost:12345 *.amazonaws.com www.googletagmanager.com www.google-analytics.com tagmanager.google.com *.upscan.tax.service.gov.uk;  form-action 'self' localhost:9570 https://ssl.gstatic.com www.gstatic.com https://fonts.gstatic.com https://fonts.googleapis.com *.amazonaws.com *.upscan.tax.service.gov.uk; frame-ancestors 'none';"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9570 localhost:9032 localhost:12345 www.google-analytics.com https://www.googletagmanager.com data:; connect-src 'self' localhost:9181 localhost:9570 localhost:12345 *.amazonaws.com www.googletagmanager.com www.google-analytics.com tagmanager.google.com *.upscan.tax.service.gov.uk;  form-action 'self' localhost:9570 https://ssl.gstatic.com www.gstatic.com https://fonts.gstatic.com https://fonts.googleapis.com *.amazonaws.com *.upscan.tax.service.gov.uk; frame-ancestors 'none';"
 
 # Play Modules
 # ~~~~
@@ -191,6 +191,7 @@ pega {
 
 upscan {
   callback.base = "http://localhost:9181"
+  failureUrl = "http://localhost:9181/upscan/upload-failed/"
   acceptedFileTypes = "image/jpg,image/jpeg,image/png,image/tiff,application/pdf,application/vnd.ms-excel,application/msword,application/vnd.ms-outlook,application/vnd.oasis.opendocument.spreadsheet,text/plain"
   maxFileSize = 6291456
 }
