--- a/conf/application.conf
+++ b/conf/application.conf
@@ -191,6 +191,7 @@ pega {
 
 upscan {
   callback.base = "http://localhost:9181"
+  base = "http://localhost:9181"
   failureUrl = "http://localhost:9181/penalties-appeals/upscan/upload-failed/"
   successUrl = "http://localhost:9181/penalties-appeals/upscan/file-posted/"
   acceptedFileTypes = "image/jpg,image/jpeg,image/png,image/tiff,application/pdf,application/vnd.ms-excel,application/msword,application/vnd.ms-outlook,application/vnd.oasis.opendocument.spreadsheet,text/plain"
