--- a/conf/application.conf
+++ b/conf/application.conf
@@ -191,8 +191,11 @@ pega {
 
 upscan {
   callback.base = "http://localhost:9181"
+  base = "http://localhost:9181"
   failureUrl = "http://localhost:9181/penalties-appeals/upscan/upload-failed/"
   successUrl = "http://localhost:9181/penalties-appeals/upscan/file-posted/"
   acceptedFileTypes = "image/jpg,image/jpeg,image/png,image/tiff,application/pdf,application/vnd.ms-excel,application/msword,application/vnd.ms-outlook,application/vnd.oasis.opendocument.spreadsheet,text/plain"
   maxFileSize = 6291456
+  statusCheckTimeout = 5 # Timeout in seconds
+  statusCheckDelay = 500 # Amount to delay check of status by X ms
 }
