[PRM-814] - Added more accepted file types for VAT Penalties

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -194,7 +194,7 @@ upscan {
   base = "http://localhost:9181"
   failureUrl = "http://localhost:9181/penalties-appeals/upscan/upload-failed/"
   successUrl = "http://localhost:9181/penalties-appeals/upscan/file-posted/"
-  acceptedFileTypes = "image/jpg,image/jpeg,image/png,image/tiff,application/pdf,application/vnd.ms-excel,application/msword,application/vnd.ms-outlook,application/vnd.oasis.opendocument.spreadsheet,text/plain"
+  acceptedFileTypes = "image/jpeg,image/png,image/tiff,application/pdf,text/plain,application/vnd.ms-outlook,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.oasis.opendocument.text,application/vnd.oasis.opendocument.spreadsheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.oasis.opendocument.presentation"
   maxFileSize = 6291456
   statusCheckTimeout = 5 # Timeout in seconds
   statusCheckDelay = 500 # Amount to delay check of status by X ms
