[PRM-974] - Used URL parameter to use new model

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -145,6 +145,12 @@ play.i18n.langs = ["en", "cy"]
 # Change this value to true to enable Welsh translations to be loaded from messages.cy, and to display the language toggle
 features.welsh-language-support = true
 
+feature {
+  switch {
+    useNewAPIModel = false
+  }
+}
+
 timeout {
   period = 900
   countDown = 120
