[PRM-1365] - Revised feature switch implementation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -147,7 +147,8 @@ features.welsh-language-support = true
 
 feature {
   switch {
-    useNewAPIModel = false
+    use-new-api-model = false
+    non-js-routing = false
   }
 }
 
