[PRM-1405] Enable API1812 model

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -147,7 +147,7 @@ features.welsh-language-support = true
 
 feature {
   switch {
-    use-new-api-model = false
+    use-new-api-model = true
     non-js-routing = false
   }
 }
