[PRM-1697] Updated feedbackUrl

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -168,6 +168,10 @@ signIn {
   continueBaseUrl = "http://localhost:9181"
 }
 
+feedback {
+  url = "contact/beta-feedback"
+}
+
 reasonableExcuse {
   fetchUrl = "/penalties/appeals-data/reasonable-excuses"
   submitUrl = "/penalties/appeals/submit-appeal"
