PRM-1711 Fixed base URl issue

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -160,16 +160,14 @@ timeout {
 urls {
   penalties-frontend = "http://localhost:9180/penalties"
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
-  feedbackUrl = "http://localhost:9514/feedback/penalties-appeals-frontend"
+  csatFeedbackUrl = "http://localhost:9514/feedback/penalties-appeals-frontend"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
+  betaFeedbackUrl = "http://localhost:9514/contact/beta-feedback"
 }
+
 signIn {
   url = "http://localhost:9949/auth-login-stub/gg-sign-in"
   continueBaseUrl = "http://localhost:9181"
-}
-
-feedback {
-  url = "contact/beta-feedback"
 }
 
 reasonableExcuse {
