PRM-1711 Back Uri Fix

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -184,7 +184,7 @@ constants {
   numberOfCharsInTextArea = 5000
 }
 
-host = "http://localhost:9180"
+penalties-frontend-host = "http://localhost:9180" #TODO Should this bee Appeals FE Host?
 
 contact-frontend.serviceId = "vat-penalties"
 
