[PRM-1666] - Make back link work for contact-frontend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -162,7 +162,7 @@ urls {
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   csatFeedbackUrl = "http://localhost:9514/feedback/penalties-appeals-frontend"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
-  betaFeedbackUrl = "http://localhost:9514/contact/beta-feedback"
+  betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
 }
 
 signIn {
@@ -184,7 +184,7 @@ constants {
   numberOfCharsInTextArea = 5000
 }
 
-penalties-frontend-host = "http://localhost:9180" #TODO Should this bee Appeals FE Host?
+penalties-appeals-frontend-host = "http://localhost:9181"
 
 contact-frontend.serviceId = "vat-penalties"
 
