[PRM-1731] - Added local callback delay for file upload

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -202,4 +202,6 @@ upscan {
   maxFileSize = 6291456
   statusCheckTimeout = 5 # Timeout in seconds
   statusCheckDelay = 500 # Amount to delay check of status by X ms
+  delayCallbackUpdate = true # Waits before updating the record with the callback (fixes a race condition locally - should only be enabled locally)
+  callbackUpdateDelay = 500 # Amount to delay updating record during callback (to fix a bug where callback runs before the filePosted locally - due to upscan stub)
 }
