[PRM-2166] - Added accessibility statement service path

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -205,3 +205,5 @@ upscan {
   delayCallbackUpdate = true # Waits before updating the record with the callback (fixes a race condition locally - should only be enabled locally)
   callbackUpdateDelay = 500 # Amount to delay updating record during callback (to fix a bug where callback runs before the filePosted locally - due to upscan stub)
 }
+
+accessibility-statement.service-path = "/penalties-appeals"
