--- a/conf/application.conf
+++ b/conf/application.conf
@@ -163,6 +163,7 @@ urls {
   csatFeedbackUrl = "http://localhost:9514/feedback/penalties-appeals-frontend"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
   betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
+  reasonableExcusesGuidanceLinkUrl = "https://www.gov.uk/tax-appeals/reasonable-excuses"
 }
 
 signIn {
