[PRM-2317] Added Digital Comms Message as a feature switch and used it on the confirmation page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -147,6 +147,7 @@ features.welsh-language-support = true
 
 feature {
   switch {
+    show-digital-comms-message = false
     non-js-routing = false
     time-machine-now = ""
   }
