[PRM-2344] [WIP] Implemented Feature switch for WarnForDuplicateFiles

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -150,6 +150,7 @@ feature {
     show-digital-comms-message = false
     non-js-routing = false
     time-machine-now = ""
+    warn-for-duplicate-files = false
   }
 }
 
