--- a/conf/application.conf
+++ b/conf/application.conf
@@ -151,6 +151,7 @@ feature {
     non-js-routing = false
     time-machine-now = ""
     warn-for-duplicate-files = false
+    show-conditional-radio-option-on-hospital-end-page = true
   }
 }
 
