[PRM-2415] - Turn on hospital stay end page feature switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -151,7 +151,7 @@ feature {
     non-js-routing = false
     time-machine-now = ""
     warn-for-duplicate-files = false
-    show-conditional-radio-option-on-hospital-end-page = true
+    show-conditional-radio-option-on-hospital-end-page = false
   }
 }
 
