PRM-2423 Put Obligation Journey behind feature switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -152,6 +152,7 @@ feature {
     time-machine-now = ""
     warn-for-duplicate-files = false
     show-conditional-radio-option-on-hospital-end-page = false
+    show-full-appeal-against-the-obligation-journey = true
   }
 }
 
