PRM-2520 added new CSP to our service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,11 +17,6 @@ include "frontend.conf"
 appName = "penalties-appeals-frontend"
 play.http.router = prod.Routes
 
-# An ApplicationLoader that uses Guice to bootstrap the application.
-play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
-
-# Primary entry point for all HTTP requests on Play applications
-play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
 
 # Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.audit.AuditModule` or create your own.
 # An audit connector must be provided.
@@ -49,7 +44,8 @@ play.modules.enabled += "global.ServiceBindings"
 # Mongo module
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9570 localhost:9032 localhost:12345 www.google-analytics.com https://www.googletagmanager.com data:; connect-src 'self' localhost:9181 localhost:9570 localhost:12345 *.amazonaws.com www.googletagmanager.com www.google-analytics.com tagmanager.google.com *.upscan.tax.service.gov.uk;  form-action 'self' localhost:9570 localhost:9180 https://ssl.gstatic.com www.gstatic.com https://fonts.gstatic.com https://fonts.googleapis.com *.amazonaws.com *.upscan.tax.service.gov.uk *.tax.service.gov.uk; frame-ancestors 'none';"
+# CSP Filter
+play.filters.enabled += "play.filters.csp.CSPFilter"
 
 # Play Modules
 # ~~~~
