--- a/conf/application.conf
+++ b/conf/application.conf
@@ -148,6 +148,7 @@ feature {
     time-machine-now = ""
     warn-for-duplicate-files = false
     show-full-appeal-against-the-obligation-journey = true
+    use-new-audit-structure = true
   }
 }
 
