--- a/conf/application.conf
+++ b/conf/application.conf
@@ -148,7 +148,8 @@ feature {
     time-machine-now = ""
     warn-for-duplicate-files = false
     show-full-appeal-against-the-obligation-journey = true
-    use-new-audit-structure = true
+    enable-prm-2509 = true
+    enable-prm-2510 = true
   }
 }
 
