[PRM-2748] - Link to feedback page when user signs out

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,6 +65,12 @@ microservice {
       port = 9250
     }
 
+    feedback-frontend {
+      protocol = http
+      host = localhost
+      port = 9514
+    }
+
     auth {
       host = localhost
       port = 8500
@@ -136,7 +142,6 @@ timeout {
 urls {
   penalties-frontend = "http://localhost:9180/penalties"
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
-  csatFeedbackUrl = "http://localhost:9514/feedback/penalties-appeals-frontend"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
   betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
   reasonableExcusesGuidanceLinkUrl = "https://www.gov.uk/tax-appeals/reasonable-excuses"
