--- a/conf/application.conf
+++ b/conf/application.conf
@@ -125,6 +125,7 @@ feature {
     time-machine-now = ""
     warn-for-duplicate-files = false
     show-full-appeal-against-the-obligation-journey = true
+    use-new-path-for-audit = true
   }
 }
 
