--- a/conf/application.conf
+++ b/conf/application.conf
@@ -170,6 +170,7 @@ mongodb {
   uri = "mongodb://localhost:27017/penalties-appeals-frontend"
   ttl = 1 hour
   encryption {
+    enabled = false
     key = "7Y7NCsZxvK9hARwJwl8hGQ=="
   }
 }
