--- a/conf/application.conf
+++ b/conf/application.conf
@@ -169,6 +169,10 @@ contact-frontend.serviceId = "vat-penalties"
 mongodb {
   uri = "mongodb://localhost:27017/penalties-appeals-frontend"
   ttl = 1 hour
+  encryption {
+    enabled = false
+    key = "7Y7NCsZxvK9hARwJwl8hGQ=="
+  }
 }
 
 upscan {
