[PRM-2931] - Use RedirectURL with policy instead of SafeRedirectUrl of plain text

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,6 +134,7 @@ timeout {
 }
 
 urls {
+  useRelativeUrls = false
   penalties-frontend = "http://localhost:9180/penalties"
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
