--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,6 +134,8 @@ timeout {
 }
 
 urls {
+  # Only set to "" locally because permitAllRedirectPolicy should be true locally
+  allowedHostname = ""
   permitAllRedirectPolicy = true
   penalties-frontend = "http://localhost:9180/penalties"
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
