PRM-2967 - Enable mongo encryption

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -172,7 +172,7 @@ mongodb {
   uri = "mongodb://localhost:27017/penalties-appeals-frontend"
   ttl = 1 hour
   encryption {
-    enabled = false
+    enabled = true
     key = "7Y7NCsZxvK9hARwJwl8hGQ=="
   }
 }
