--- a/conf/application.conf
+++ b/conf/application.conf
@@ -113,6 +113,7 @@ feature {
     time-machine-now = ""
     show-full-appeal-against-the-obligation-journey = true
     show-reasonable-excuse-hint-text = true
+    show-can-you-pay-your-vat-bill-pages = true
   }
 }
 
@@ -131,6 +132,7 @@ urls {
   betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
   reasonableExcusesGuidanceLinkUrl = "https://www.gov.uk/tax-appeals/reasonable-excuses"
   feedback = "http://localhost:9514/feedback/penalties-appeals-frontend"
+  externalHMRCLinkUrl = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/vat-enquiries#phone-title"
 }
 
 signIn {
