[PRM-3063] Updated routing for YouCanAppealOnline page, added new session key

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -128,6 +128,7 @@ urls {
   permitAllRedirectPolicy = true
   penalties-frontend = "http://localhost:9180/penalties"
   timeToPay = "http://localhost:9152/vat-through-software/time-to-pay"
+  payYourVAT = "http://localhost:9152/vat-through-software/pay-your-vat" //Placeholder until url is confirmed
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
   betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
