[PRM-3067] Create Other Ways to appeal page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,6 +134,7 @@ urls {
   feedback = "http://localhost:9514/feedback/penalties-appeals-frontend"
   externalHMRCLinkUrl = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/vat-enquiries#phone-title"
   externalHMRCLinkWelshUrl = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/vat-customs-and-excise-and-duties-enquiries-for-welsh-speaking-customers"
+  externalTaxTribunalUrl = "https://www.gov.uk/tax-tribunal"
 }
 
 signIn {
