[PRM-3072] Added tests for IfYouvePaidYourVAT tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -113,7 +113,7 @@ feature {
     time-machine-now = ""
     show-full-appeal-against-the-obligation-journey = true
     show-reasonable-excuse-hint-text = true
-    show-can-you-pay-your-vat-bill-pages = true
+    show-can-you-pay-your-vat-bill-pages = false
   }
 }
 
