[PRM-3072] Addressed feature switch changes and added welsh content link

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -113,7 +113,7 @@ feature {
     time-machine-now = ""
     show-full-appeal-against-the-obligation-journey = true
     show-reasonable-excuse-hint-text = true
-    show-can-you-pay-your-vat-bill-pages = true
+    show-find-out-how-to-appeal-journey = true
   }
 }
 
@@ -133,6 +133,7 @@ urls {
   reasonableExcusesGuidanceLinkUrl = "https://www.gov.uk/tax-appeals/reasonable-excuses"
   feedback = "http://localhost:9514/feedback/penalties-appeals-frontend"
   externalHMRCLinkUrl = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/vat-enquiries#phone-title"
+  externalHMRCLinkWelshUrl = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/vat-customs-and-excise-and-duties-enquiries-for-welsh-speaking-customers"
 }
 
 signIn {
