--- a/conf/application.conf
+++ b/conf/application.conf
@@ -127,6 +127,7 @@ urls {
   allowedHostname = ""
   permitAllRedirectPolicy = true
   penalties-frontend = "http://localhost:9180/penalties"
+  timeToPay = "http://localhost:9152/vat-through-software/time-to-pay"
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
   betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
