[PRM-3130] - PR comments

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -114,6 +114,7 @@ feature {
     show-full-appeal-against-the-obligation-journey = true
     show-reasonable-excuse-hint-text = true
     show-find-out-how-to-appeal-journey = true
+    show-find-out-how-to-appeal-lsp-journey = true
   }
 }
 
