[PRM-3130] - Added 2 LSP obligation pages + yes routing (#536)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -114,6 +114,7 @@ feature {
     show-full-appeal-against-the-obligation-journey = true
     show-reasonable-excuse-hint-text = true
     show-find-out-how-to-appeal-journey = true
+    show-find-out-how-to-appeal-lsp-journey = true
   }
 }
 
@@ -128,7 +129,7 @@ urls {
   permitAllRedirectPolicy = true
   penalties-frontend = "http://localhost:9180/penalties"
   timeToPay = "http://localhost:9152/vat-through-software/time-to-pay"
-  payYourVAT = "http://localhost:9152/vat-through-software/pay-your-vat" //Placeholder until url is confirmed
+  payYourVAT = "http://localhost:9152/vat-through-software/pay-your-vat" # Placeholder until url is confirmed
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
   betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
