[PRM-3135] - Added actions to take before appealing online page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,6 +138,7 @@ urls {
   externalHMRCLinkUrl = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/vat-enquiries#phone-title"
   externalHMRCLinkWelshUrl = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/vat-customs-and-excise-and-duties-enquiries-for-welsh-speaking-customers"
   externalTaxTribunalUrl = "https://www.gov.uk/tax-tribunal"
+  externalAppealToTaxTribunalUrl = "https://www.gov.uk/tax-tribunal/appeal-to-tribunal"
 }
 
 signIn {
