PRM-3140 Add CA Find Out How To Appeal FS

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,6 +115,7 @@ feature {
     show-reasonable-excuse-hint-text = true
     show-find-out-how-to-appeal-journey = true
     show-find-out-how-to-appeal-lsp-journey = true
+    show-ca-find-out-how-to-appeal-journey = true
   }
 }
 
