--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,6 +80,11 @@ microservice {
       host = localhost
       port = 9570
     }
+
+    essttp-backend {
+      host = localhost
+      port = 9156
+    }
   }
 }
 
@@ -129,7 +134,6 @@ urls {
   allowedHostname = ""
   permitAllRedirectPolicy = true
   penalties-frontend = "http://localhost:9180/penalties"
-  timeToPay = "http://localhost:9152/vat-through-software/time-to-pay"
   payYourVAT = "http://localhost:9152/vat-through-software/pay-your-vat" # Placeholder until url is confirmed
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
