--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,6 +81,11 @@ microservice {
       port = 9570
     }
 
+     pay-api {
+          host = localhost
+          port = 9156
+        }
+
     essttp-backend {
       protocol = http
       host = localhost
@@ -135,7 +140,6 @@ urls {
   allowedHostname = ""
   permitAllRedirectPolicy = true
   penalties-frontend = "http://localhost:9180/penalties"
-  payYourVAT = "http://localhost:9152/vat-through-software/pay-your-vat" # Placeholder until url is confirmed
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
   betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
