[PRM-3163} Updated localhost port for essttp-backend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,8 +82,9 @@ microservice {
     }
 
     essttp-backend {
+      protocol = http
       host = localhost
-      port = 9156
+      port = 9216
     }
   }
 }
