PRM-3184 added tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,8 +82,9 @@ microservice {
     }
 
      pay-api {
+          protocol = http
           host = localhost
-          port = 9156
+          port = 9057
         }
 
     essttp-backend {
