Prm 3184 added pay now url and routing (#545)
* PRM-3184 WIP with Pay now url

* PRM-3184 fixed compilation errors

* PRM-3184 added tests

* PRM-3184 removed comma

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,6 +81,12 @@ microservice {
       port = 9570
     }
 
+     pay-api {
+          protocol = http
+          host = localhost
+          port = 9057
+        }
+
     essttp-backend {
       protocol = http
       host = localhost
@@ -135,7 +141,6 @@ urls {
   allowedHostname = ""
   permitAllRedirectPolicy = true
   penalties-frontend = "http://localhost:9180/penalties"
-  payYourVAT = "http://localhost:9152/vat-through-software/pay-your-vat" # Placeholder until url is confirmed
   vatOverview = "http://localhost:9152/vat-through-software/vat-overview"
   whatYouOwe = "http://localhost:9152/vat-through-software/what-you-owe"
   betaFeedbackUrl = "http://localhost:9250/contact/beta-feedback"
