DL-13392 added webchat link on our start page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -70,6 +70,12 @@ microservice {
       port = 9182
     }
 
+    digital-engagement-platform-frontend {
+          protocol = http
+          host = localhost
+          port = 9956
+        }
+
     vat-agent-client-lookup-frontend {
       host = "http://localhost:9152"
       startUrl = "/vat-through-software/test-only/vaclf-stub"
@@ -124,6 +130,7 @@ feature {
     non-js-routing = false
     time-machine-now = ""
     show-reasonable-excuse-hint-text = true
+    show-web-chat-link = true
   }
 }
 
