DL-13392 updated to work correctly in base

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -70,12 +70,6 @@ microservice {
       port = 9182
     }
 
-    digital-engagement-platform-frontend {
-          protocol = http
-          host = localhost
-          port = 9956
-        }
-
     vat-agent-client-lookup-frontend {
       host = "http://localhost:9152"
       startUrl = "/vat-through-software/test-only/vaclf-stub"
@@ -159,6 +153,11 @@ signIn {
   url = "http://localhost:9949/auth-login-stub/gg-sign-in"
   continueBaseUrl = "http://localhost:9181"
 }
+
+  webChat {
+         baseUrl = "http://localhost:9956"
+         url = "/ask-hmrc/chat/vat-online"
+        }
 
 reasonableExcuse {
   fetchUrl = "/penalties/appeals-data/reasonable-excuses"
