--- a/app/assets/package.json
+++ b/app/assets/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "9.1.2",
     "eslint": "7.32.0",
     "eslint-loader": "4.0.2",
+    "eslint-webpack-plugin": "^3.0.0",
     "jasmine": "4.5.0",
     "jasmine-core": "4.0.1",
     "karma": "6.4.1",
