--- a/app/assets/package.json
+++ b/app/assets/package.json
@@ -20,7 +20,7 @@
     "babel-loader": "9.1.2",
     "eslint": "7.32.0",
     "eslint-loader": "4.0.2",
-    "eslint-webpack-plugin": "^3.0.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "jasmine": "4.5.0",
     "jasmine-core": "4.0.1",
     "karma": "6.4.1",
@@ -31,6 +31,10 @@
     "puppeteer": "19.6.3",
     "webpack": "5.94.0",
     "webpack-cli": "5.0.1",
-    "webpack-merge": "5.8.0"
+    "webpack-merge": "5.8.0",
+    "@types/eslint": "8.56.12",
+    "jest-worker": "28.1.3",
+    "micromatch": "4.0.8",
+    "supports-color": "8.1.1"
   }
 }
