--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
   "name": "penalties-appeals-frontend",
   "version": "1.0.0",
-  "description": "The penalties and appeals service is a frontend microservice only applicable for MTD VAT users.",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "description": "Frontend components",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --config webpack.config.js",
+    "build": "npm test && webpack --config webpack.config.js",
+    "test": "node_modules/karma/bin/karma start --single-run",
+    "test-watch": "node_modules/karma/bin/karma start"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/preset-env": "^7.26.9",
-    "@types/eslint": "^8.56.12",
-    "babel-loader": "^10.0.0",
-    "jest-worker": "^28.1.3",
-    "micromatch": "^4.0.8",
-    "prettier": "^3.5.3",
-    "supports-color": "^8.1.1",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^6.0.1"
-  },
+  "author": "HMRC",
+  "license": "Apache-2.0",
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-webpack-plugin": "^5.0.0",
-    "globals": "^16.0.0"
+    "@babel/core": "7.20.12",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/preset-env": "7.20.2",
+    "@types/eslint": "8.56.12",
+    "babel-loader": "9.1.2",
+    "eslint": "7.32.0",
+    "eslint-loader": "4.0.2",
+    "eslint-webpack-plugin": "^3.2.0",
+    "jasmine": "4.5.0",
+    "jasmine-core": "4.0.1",
+    "jest-worker": "28.1.3",
+    "karma": "6.4.1",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-jasmine": "5.1.0",
+    "karma-spec-reporter": "0.0.36",
+    "karma-webpack": "5.0.0",
+    "micromatch": "4.0.8",
+    "puppeteer": "^24.1.1",
+    "supports-color": "8.1.1",
+    "webpack": "5.94.0",
+    "webpack-cli": "5.0.1",
+    "webpack-merge": "5.8.0"
   }
 }
