--- a/package.json
+++ b/package.json
@@ -17,24 +17,24 @@
     "@babel/core": "7.20.12",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/preset-env": "7.20.2",
+    "@types/eslint": "8.56.12",
     "babel-loader": "9.1.2",
     "eslint": "7.32.0",
     "eslint-loader": "4.0.2",
     "eslint-webpack-plugin": "^3.2.0",
     "jasmine": "4.5.0",
     "jasmine-core": "4.0.1",
+    "jest-worker": "28.1.3",
     "karma": "6.4.1",
     "karma-chrome-launcher": "3.1.1",
     "karma-jasmine": "5.1.0",
     "karma-spec-reporter": "0.0.36",
     "karma-webpack": "5.0.0",
+    "micromatch": "4.0.8",
     "puppeteer": "^24.1.1",
+    "supports-color": "8.1.1",
     "webpack": "5.94.0",
     "webpack-cli": "5.0.1",
-    "webpack-merge": "5.8.0",
-    "@types/eslint": "8.56.12",
-    "jest-worker": "28.1.3",
-    "micromatch": "4.0.8",
-    "supports-color": "8.1.1"
+    "webpack-merge": "5.8.0"
   }
 }
