--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,6 +19,7 @@ play.http.router = prod.Routes
 
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 # Auth client module
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
@@ -92,20 +93,6 @@ microservice {
       host = localhost
       port = 9216
     }
-  }
-}
-
-controllers {
-  controllers.Assets = {
-    needsAuditing = false
-  }
-
-  uk.gov.hmrc.govukfrontend.controllers.Assets = {
-    needsAuditing = false
-  }
-
-  uk.gov.hmrc.hmrcfrontend.controllers.Assets = {
-      needsAuditing = false
   }
 }
 
